--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,8 @@
 
     <!-- Custom styles for this template-->
     <link href="css/sb-admin-2.min.css" rel="stylesheet" />
+    <link href="css/energycomp.css" rel="stylesheet" />
+    <link href="css/weather.css" rel="stylesheet" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
