--- a/public/index.html
+++ b/public/index.html
@@ -9,11 +9,11 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <title>Premier Admin - Dashboard</title>
+    <title>M&#178; Admin - Dashboard</title>
 
     <!-- Custom fonts for this template-->
     <link
-      href="vendor/fontawesome-free/css/all.min.css"
+      href="%PUBLIC_URL%/vendor/fontawesome-free/css/all.min.css"
       rel="stylesheet"
       type="text/css"
     />
@@ -23,29 +23,29 @@
     />
 
     <!-- Custom styles for this template-->
-    <link href="css/sb-admin-2.min.css" rel="stylesheet" />
-    <link href="css/energycomp.css" rel="stylesheet" />
-    <link href="css/weather.css" rel="stylesheet" />
+    <link href="%PUBLIC_URL%/css/sb-admin-2.min.css" rel="stylesheet" />
+    <link href="%PUBLIC_URL%/css/energycomp.css" rel="stylesheet" />
+    <link href="%PUBLIC_URL%/css/weather.css" rel="stylesheet" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
 
     <!-- Bootstrap core JavaScript-->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="%PUBLIC_URL%/vendor/jquery/jquery.min.js"></script>
+    <script src="%PUBLIC_URL%/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
     <!-- Core plugin JavaScript-->
-    <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+    <script src="%PUBLIC_URL%/vendor/jquery-easing/jquery.easing.min.js"></script>
 
     <!-- Custom scripts for all pages-->
-    <script src="js/sb-admin-2.min.js"></script>
+    <script src="%PUBLIC_URL%/js/sb-admin-2.min.js"></script>
 
     <!-- Page level plugins -->
-    <script src="vendor/chart.js/Chart.min.js"></script>
+    <script src="%PUBLIC_URL%/vendor/chart.js/Chart.min.js"></script>
 
     <!-- Page level custom scripts -->
-    <script src="js/demo/chart-area-demo.js"></script>
-    <script src="js/demo/chart-pie-demo.js"></script>
+    <script src="%PUBLIC_URL%/js/demo/chart-area-demo.js"></script>
+    <script src="%PUBLIC_URL%/js/demo/chart-pie-demo.js"></script>
   </body>
 </html>
