--- a/public/index.html
+++ b/public/index.html
@@ -21,11 +21,19 @@
       href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
       rel="stylesheet"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Manrope:wght@400;800&family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap"
+      rel="stylesheet"
+    />
 
     <!-- Custom styles for this template-->
     <link href="%PUBLIC_URL%/css/sb-admin-2.min.css" rel="stylesheet" />
     <link href="%PUBLIC_URL%/css/energycomp.css" rel="stylesheet" />
     <link href="%PUBLIC_URL%/css/weather.css" rel="stylesheet" />
+    <link href="%PUBLIC_URL%/css/kpi.css" rel="stylesheet" />
+    <link href="%PUBLIC_URL%/css/emstemp.css" rel="stylesheet" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
