--- a/public/index.html
+++ b/public/index.html
@@ -34,6 +34,13 @@
     <link href="%PUBLIC_URL%/css/weather.css" rel="stylesheet" />
     <link href="%PUBLIC_URL%/css/kpi.css" rel="stylesheet" />
     <link href="%PUBLIC_URL%/css/emstemp.css" rel="stylesheet" />
+    <link href="%PUBLIC_URL%/css/EnergyCompo.css" rel="stylesheet" />
+    <link href="%PUBLIC_URL%/css/PowerFactorGauge.css" rel="stylesheet" />
+    <link href="%PUBLIC_URL%/css/realtimestyle.css" rel="stylesheet" />
+    <link href="%PUBLIC_URL%/css/sidebar.css" rel="stylesheet" />
+    <link href="%PUBLIC_URL%/css/StackedBarDGEB.css" rel="stylesheet" />
+    <link href="%PUBLIC_URL%/css/default.css" rel="stylesheet" />
+    <link href="%PUBLIC_URL%/css/styles.css" rel="stylesheet" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
